--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -7,16 +7,16 @@
     "@types/node": "12.0.7",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
-    "@types/react-router": "^5.0.1",
-    "@types/react-router-dom": "^4.3.3",
-    "@types/reactstrap": "^8.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
+    "@types/react-router": "^5.1.3",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/reactstrap": "^8.0.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.0",
-    "typescript": "3.5.1"
+    "reactstrap": "^8.1.1",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
